add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,7 +5,5 @@ $color-grey: #687480;
 $color-red: #f14a27;
 $table-min-width: 640px;
 $desktop-min-width: 1280px;
-$font-ibm-plex:
-  IBM Plex Sans,
-  sans-serif;
+$font-ibm-plex: IBM Plex Sans, sans-serif;
 $font-montserrat: Montserrat, sans-serif;
