--- a/src/styles/block/_lecture.scss
+++ b/src/styles/block/_lecture.scss
@@ -20,7 +20,7 @@
     position: relative;
     top: 120px;
     padding-block: 20px;
-    box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 0 rgba(26, 90, 76, 0.25);
     background: rgb(255, 255, 255);
 
     @include on-table {
