--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,67 @@
+h1, h2, h3, h4, h5, h6 {
+  @extend %title;
+}
+
+a {
+  @extend %link;
+}
+
+p {
+  @extend %text;
+}
+
+ul, li {
+  @extend %list;
+}
+
 h1 {
-  @extend %h1;
+  font-size: 45px;
+  font-weight: 700;
+  color: #000;
+  text-align: center;
+  line-height: 45px;
+
+  @include on-tablet {
+    font-size: 54px;
+    text-align: left;
+    line-height: 65px;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+    line-height: 86px;
+  }
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 36px;
+
+  @include on-tablet {
+    font-size: 48px;
+    text-align: left;
+    line-height: 48px;
+  }
+}
+
+h3 {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 28px;
+  text-align: left;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+h6 {
+  font-family: $text-ff;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: left;
 }
