--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,28 @@
-$c-gray: #eee;
+$title-ff: Montserrat, sans-serif;
+$text-ff: IBM Plex Sans, sans-serif;
+$title-t-c: #0F0E08;
+$art-museum-b-c: #1A5A4C;
+$art-museum-event-c: #687480;
+$navigation-link-c: #FFF;
+$menu-text-c: #FFF;
+$effect-duration: .3s;
+$current-event-name-c: #687480;
+$current-event-time-c: #1A5A4C;
+$current-event-title-after-c: #F14A27;
+$current-event-desc-c: #4E4E4E;
+$lecture-name-c: #687480;
+$lecture-time-c: #1A5A4C;
+$gallery-btn-w: 9px;
+$gallery-btn-h: 9px;
+$gallery-btn-c: #E0E0E0;
+$gallery-btn-active-c: #1A5A4C;
+$gallery-width: 650px;
+$subscribe-text-c: #FFF;
+$subscribe-btn-c: #F14A27;
+$logo-c: #0F0E08;
+$footer-text-c: #0F0E08;
+$footer-link-top-bor-c: #1A5A4C;
+$footer-info-block-bor-c: #1A5A4C80;
+$tablet-width: 768px;
+$desktop-width: 1280px;
+
