--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,24 @@
-%h1 {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
+%title {
+  margin: 0;
+  padding: 0;
+  font-family: $title-ff;
+  color: $title-t-c;
+}
+
+%link {
+  font-family: $text-ff;
+  color: inherit;
+  text-decoration: none;
+}
+
+%text {
+  margin: 0;
+  padding: 0;
+  font-family: $text-ff;
+}
+
+%list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
