--- a/src/styles/blocks/_current_events.scss
+++ b/src/styles/blocks/_current_events.scss
@@ -1,4 +1,8 @@
 .current-events {
+  @include on-desktop {
+    scroll-margin-top: -150px;
+  }
+
   &__title {
     padding-block: 70px 40px;
 
@@ -15,5 +19,9 @@
     display: flex;
     flex-direction: column;
     row-gap: 60px;
+
+    @include on-desktop {
+      row-gap: 104px;
+    }
   }
 }
