--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -60,6 +60,8 @@
     text-decoration: none;
     line-height: 30px;
 
+    @include hover(transform, rotate(-360deg));
+
     @include on-tablet {
       font-size: 36px;
       line-height: 36px;
@@ -80,5 +82,9 @@
     @include on-desktop {
       left: 55px;
     }
+  }
+
+  &__menu-icon {
+    @include hover(transform, scale(1.1));
   }
 }
