--- a/src/styles/blocks/_lecture.scss
+++ b/src/styles/blocks/_lecture.scss
@@ -6,6 +6,11 @@
     padding-inline: 34px;
   }
 
+  @include on-desktop {
+    padding-top: 80px;
+    padding-inline: 0;
+  }
+
   &__photo {
     display: block;
     width: 100%;
@@ -15,6 +20,10 @@
 
     @include on-tablet {
       height: 390px;
+    }
+
+    @include on-desktop {
+      height: 550px;
     }
   }
 
@@ -27,6 +36,10 @@
     @include on-tablet {
       margin-inline: 65px;
       transform: translateY(-80px);
+    }
+
+    @include on-desktop {
+      margin-inline: 355px;
     }
   }
 
