--- a/src/styles/blocks/_navigation.scss
+++ b/src/styles/blocks/_navigation.scss
@@ -29,6 +29,10 @@
     display: flex;
   }
 
+  &__close-icon {
+    @include hover(transform, scale(1.1));
+  }
+
   &__left {
     display: flex;
     flex-direction: column;
@@ -56,6 +60,8 @@
     color: $navigation-link-c;
     text-align: left;
     line-height: 16px;
+
+    @include hover(opacity, 0.7);
 
     @include on-desktop {
       font-size: 22px;
