--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -3,9 +3,9 @@
 
   &__content {
     @include on-tablet {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      column-gap: 20px;
+      @include page-grid;
+
+      position: relative;
     }
   }
 
@@ -48,6 +48,8 @@
     width: 24px;
     height: 24px;
 
+    @include hover(transform, scale(1.2));
+
     &--fb {
       background-image: url(../images/social/facebook-letter-logo.svg);
     }
@@ -76,6 +78,21 @@
       grid-column: 2 / -2;
       padding-top: 0;
     }
+
+    @include on-desktop {
+      grid-column: 3 / span 4;
+      border-bottom: none;
+
+      &::after {
+        content: "";
+        position: absolute;
+        left: 55%;
+        display: flex;
+        height: 260px;
+        width: 1px;
+        background-color: $footer-info-block-bor-c;
+      }
+    }
   }
 
   &__to-top {
@@ -84,6 +101,10 @@
     grid-template-columns: 1fr 50px;
     height: 50px;
     margin-bottom: 20px;
+
+    @include on-desktop {
+      display: none;
+    }
   }
 
   &__link-top {
@@ -93,6 +114,11 @@
     background-image: url(../images/icons/carbon_arrow-up.svg);
     background-repeat: no-repeat;
     background-position: center;
+    transition: $effect-duration;
+
+    &:hover {
+      background-position: bottom;
+    }
   }
 
   &__navigation {
@@ -106,6 +132,11 @@
       grid-column: 2 / -2;
       padding-block: 64px 120px;
     }
+
+    @include on-desktop {
+      grid-column: -6 / -1;
+      padding-block: 0 80px;
+    }
   }
 
   &__copyright {
@@ -117,6 +148,10 @@
       grid-column: 1 / -1;
       flex-direction: row-reverse;
       justify-content: space-between;
+    }
+
+    @include on-desktop {
+      margin-top: 87px;
     }
   }
 
