Implement mobile header

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,12 @@
 @import 'fonts';
 @import 'typography';
 
+// Blocks
+@import 'blocks/header';
+@import 'blocks/top-bar';
+@import 'blocks/main';
+
 body {
   background: $c-gray;
+  margin: 0;
 }
