Implement current events section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,8 +6,14 @@
 @import 'blocks/header';
 @import 'blocks/top-bar';
 @import 'blocks/main';
+@import 'blocks/current-events';
+@import 'blocks/event';
 
 body {
   background: $c-gray;
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
