--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -36,6 +36,7 @@
 
   --columns: 2;
 
+  box-sizing: border-box;
   display: grid;
   column-gap: 20px;
   grid-template-columns: repeat(var(--columns), 1fr);
