Implement rest of main block except of subscription

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,12 +8,23 @@
 @import 'blocks/main';
 @import 'blocks/current-events';
 @import 'blocks/event';
+@import 'blocks/lecture';
+@import 'blocks/gallery';
 
 body {
+  font-family: Montserrat, sans-serif;
   background: $c-gray;
   margin: 0;
 }
 
+h1,
+h2,
+h3 {
+  line-height: 100%;
+}
+
 p {
+  font-family: 'IBM Plex Sans', sans-serif;
+  line-height: 100%;
   margin: 0;
 }
