--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,8 +1,10 @@
 .current-events {
-  grid-column: 1 / -1;
+  @include page-grid;
 
   &__title {
-    font-family: Montserrat, sans-serif;
+    grid-column: 1 / -1;
+    margin-top: 0px;
+    margin-bottom: 40px;
     font-size: 36px;
     font-weight: 700;
     line-height: 36px;
@@ -10,7 +12,7 @@
   }
 
   &__container {
-    margin-top: 40px;
+    grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
     gap: 60px;
