--- a/src/styles/block/_icon.scss
+++ b/src/styles/block/_icon.scss
@@ -2,6 +2,7 @@
   width: 24px;
   height: 24px;
   transition: transform 0.3s ease-in-out;
+  cursor: pointer;
 
   &:hover {
     transform: scale(1.2);
