Finish mobile design

--- a/src/styles/blocks/main/current-events.scss
+++ b/src/styles/blocks/main/current-events.scss
@@ -3,7 +3,7 @@
 
   &__title {
     grid-column: 1 / -1;
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 40px;
     font-size: 36px;
     font-weight: 700;
