--- a/src/styles/blocks/main/lecture.scss
+++ b/src/styles/blocks/main/lecture.scss
@@ -8,7 +8,7 @@
     grid-column: 1 / -1;
     padding-block: 20px;
     background-color: #fff;
-    box-shadow: 0px 2px 0px 0px #1a5a4c40;
+    box-shadow: 0 2px 0 0 #1a5a4c40;
   }
 
   &__info-container {
