--- a/src/styles/blocks/main/gallery.scss
+++ b/src/styles/blocks/main/gallery.scss
@@ -5,7 +5,7 @@
 
   &__title {
     grid-column: 1 / -1;
-    margin-top: 0px;
+    margin-top: 0;
     margin-bottom: 40px;
     font-size: 36px;
     font-weight: 700;
@@ -14,6 +14,7 @@
 
   &__images {
     @include page-grid;
+
     grid-column: 1 / -1;
     display: flex;
     gap: 16px;
