--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,17 +3,29 @@
 @import 'typography';
 
 // Blocks
-@import 'blocks/header';
-@import 'blocks/top-bar';
-@import 'blocks/main';
-@import 'blocks/current-events';
-@import 'blocks/event';
-@import 'blocks/lecture';
-@import 'blocks/gallery';
+
+// Header
+@import 'blocks/header/header';
+@import 'blocks/header/top-bar';
+@import 'blocks/header/menu';
+
+// Main
+@import 'blocks/main/main';
+@import 'blocks/main/current-events';
+@import 'blocks/main/event';
+@import 'blocks/main/lecture';
+@import 'blocks/main/gallery';
+@import 'blocks/main/subscription';
+
+// Footer
+@import 'blocks/footer/footer';
+
+html {
+  font-family: Montserrat, sans-serif;
+  scroll-behavior: smooth;
+}
 
 body {
-  font-family: Montserrat, sans-serif;
-  background: $c-gray;
   margin: 0;
 }
 
@@ -23,8 +35,13 @@ h3 {
   line-height: 100%;
 }
 
-p {
+p,
+a {
   font-family: 'IBM Plex Sans', sans-serif;
   line-height: 100%;
   margin: 0;
+}
+
+strong {
+  font-weight: 600;
 }
