--- a/src/styles/blocks/main/current-events.scss
+++ b/src/styles/blocks/main/current-events.scss
@@ -1,7 +1,7 @@
 .current-events {
-  @include page-grid;
-
   &__title {
+    @include content-padding-inline;
+
     grid-column: 1 / -1;
     margin-top: 0;
     margin-bottom: 40px;
@@ -9,6 +9,14 @@
     font-weight: 700;
     line-height: 36px;
     text-align: center;
+
+    @include on-tablet {
+      text-align: left;
+    }
+
+    @include on-desktop {
+      font-size: 48px;
+    }
   }
 
   &__container {
