--- a/src/styles/blocks/footer/footer.scss
+++ b/src/styles/blocks/footer/footer.scss
@@ -12,6 +12,18 @@
     grid-column: 1 / -1;
     display: flex;
     justify-content: space-between;
+
+    @include on-tablet {
+      grid-column: 1 / 2;
+      flex-direction: column;
+      justify-content: start;
+      gap: 62px;
+    }
+  }
+
+  &__logo {
+    height: 72px;
+    width: 72px;
   }
 
   &__socials {
@@ -25,30 +37,70 @@
 
   // Containers
   &__info-container {
+    margin-top: 30px;
+
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    @include on-tablet {
+      margin: 0;
+    }
   }
 
   &__schelude-container {
     grid-column: 1;
+
+    @include on-tablet {
+      grid-column: 2 / 4;
+    }
+
+    @include on-desktop {
+      grid-column: 3 / 5;
+    }
   }
 
   &__contacts-container {
     grid-column: 2;
+
+    @include on-tablet {
+      grid-column: 4 / 6;
+    }
+
+    @include on-desktop {
+      grid-column: 5 / 7;
+    }
   }
 
   // Bottom
   &__arrow-up {
     grid-column: -2;
     justify-self: end;
+
+    height: 50px;
   }
 
   &__bottom-line {
-    margin-top: 20px;
+    margin-block: 20px;
     grid-column: 1 / -1;
     height: 1px;
     background: #1a5a4c80;
+
+    @include on-tablet {
+      margin-block: 64px;
+      grid-column: 2 / 6;
+    }
+
+    @include on-desktop {
+      margin: 0;
+
+      justify-self: center;
+
+      height: 100%;
+      width: 1px;
+      grid-column: 7;
+      grid-row: 1;
+    }
   }
 
   // Links
@@ -60,10 +112,29 @@
   }
 
   &__links-container {
-    margin-top: 40px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+
+    @include on-desktop {
+      grid-row: 1;
+    }
+
+    &--left {
+      @include on-tablet {
+        grid-column: 2 / 4;
+      }
+
+      @include on-desktop {
+        grid-column: 8 / 10;
+      }
+    }
+
+    &--right {
+      @include on-desktop {
+        grid-column: 10 / 12;
+      }
+    }
   }
 
   &__copyright {
@@ -73,5 +144,10 @@
     font-weight: 300;
     line-height: 24px;
     text-align: center;
+
+    @include on-tablet {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 }
