--- a/src/styles/blocks/header/top-bar.scss
+++ b/src/styles/blocks/header/top-bar.scss
@@ -20,8 +20,16 @@
   }
 
   &__logo {
-    grid-column: calc(var(--columns) / 2) / calc(var(--columns) / 2 + 2);
+    grid-column: 1 / 3;
     grid-row: 1;
     margin: auto;
+
+    @include on-tablet {
+      grid-column: 4 / 6;
+    }
+
+    @include on-desktop {
+      grid-column: 6 / 8;
+    }
   }
 }
