--- a/src/styles/blocks/main/event.scss
+++ b/src/styles/blocks/main/event.scss
@@ -1,10 +1,41 @@
 .event {
+  @include page-grid;
+
+  &__image {
+    grid-column: 1 / -1;
+    width: 100%;
+
+    @include on-desktop {
+      grid-column: 1 / 8;
+    }
+  }
+
+  &__container {
+    @include on-desktop {
+      grid-column: 9 / -1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
+
   &__info-container {
+    grid-column: 1 / -1;
     margin-top: 16px;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include on-tablet {
+      font-size: 14px;
+      grid-column: 1 / 3;
+    }
+
+    @include on-desktop {
+      justify-content: start;
+      gap: 20px;
+    }
   }
 
   &__type {
@@ -19,6 +50,7 @@
   }
 
   &__title-container {
+    grid-column: 1 / -1;
     display: flex;
     align-items: center;
   }
@@ -28,6 +60,10 @@
     font-size: 28px;
     font-weight: 400;
     margin-right: 10px;
+
+    @include on-desktop {
+      font-size: 36px;
+    }
   }
 
   &__status {
@@ -38,7 +74,12 @@
   }
 
   &__description {
+    grid-column: 1 / -1;
     line-height: 24px;
     color: #4e4e4e;
+
+    @include on-tablet {
+      grid-column: 1 / 5;
+    }
   }
 }
