--- a/src/styles/blocks/main/lecture.scss
+++ b/src/styles/blocks/main/lecture.scss
@@ -1,14 +1,47 @@
 .lecture {
+  @include page-grid;
+
   &__container {
-    @include page-grid;
+    grid-column: 1 / -1;
+
+    @include on-tablet {
+      grid-column: 2 / 6;
+    }
+
+    @include on-desktop {
+      grid-column: 3 / 11;
+    }
+  }
+
+  &__image {
+    width: 100%;
+    grid-column: 1 / -1;
+
+    @include on-desktop {
+      display: block;
+      padding: 0;
+    }
   }
 
   &__box {
     margin-top: -60px;
+    box-sizing: border-box;
     grid-column: 1 / -1;
     padding-block: 20px;
     background-color: #fff;
     box-shadow: 0 2px 0 0 #1a5a4c40;
+
+    @include on-tablet {
+      grid-column: 1 / -1;
+      justify-self: center;
+      padding: 45px 55px;
+    }
+
+    @include on-desktop {
+      margin-top: -100px;
+      grid-column: 4 / 10;
+      padding: 50px 100px;
+    }
   }
 
   &__info-container {
@@ -16,12 +49,21 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+
+    @include on-tablet {
+      justify-content: space-between;
+    }
   }
 
   &__type {
     font-weight: 500;
     text-transform: uppercase;
     color: #687480;
+
+    @include on-tablet {
+      grid-column: 1;
+      text-align: left;
+    }
   }
 
   &__date {
@@ -36,5 +78,13 @@
     font-size: 28px;
     font-weight: 400;
     text-align: center;
+
+    @include on-tablet {
+      text-align: left;
+    }
+
+    @include on-desktop {
+      font-size: 36px;
+    }
   }
 }
