--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -27,7 +27,7 @@
   @include on-desktop {
     margin-inline: auto;
 
-    // padding-inline: 120px;
+    padding-inline: 55px;
   }
 }
 
@@ -44,10 +44,12 @@
   @include on-tablet {
     --columns: 6;
 
-    column-gap: 20px;
+    column-gap: 30px;
   }
 
   @include on-desktop {
     --columns: 12;
+
+    column-gap: 30px;
   }
 }
