Add animations for images and submit button

--- a/src/styles/blocks/main/gallery.scss
+++ b/src/styles/blocks/main/gallery.scss
@@ -70,6 +70,10 @@
     &--small-quare {
       grid-area: d;
     }
+
+    @include on-desktop {
+      @include imageHover;
+    }
   }
 
   &__dots {
