--- a/src/styles/blocks/main/subscription.scss
+++ b/src/styles/blocks/main/subscription.scss
@@ -83,5 +83,7 @@
     aspect-ratio: 1 / 1;
     border: none;
     background-color: #f14a27;
+
+    @include hover(transform, translateY(-5px));
   }
 }
