Common colors to variables

--- a/src/styles/blocks/footer/footer.scss
+++ b/src/styles/blocks/footer/footer.scss
@@ -5,7 +5,7 @@
 
   font-size: 14px;
   line-height: 20px;
-  color: #0f0e08;
+  color: $black-text-color;
 
   // Top
   &__top {
@@ -106,7 +106,7 @@
   // Links
   &__link {
     text-decoration: none;
-    color: #0f0e08;
+    color: $black-text-color;
 
     font-size: 14px;
   }
