--- a/src/styles/blocks/header/header.scss
+++ b/src/styles/blocks/header/header.scss
@@ -101,7 +101,7 @@
     justify-content: center;
     height: 100%;
     aspect-ratio: 1 / 1;
-    background-color: #1a5a4c;
+    background-color: $green-color;
   }
 
   &__events-line {
