--- a/src/styles/blocks/header/menu.scss
+++ b/src/styles/blocks/header/menu.scss
@@ -26,7 +26,7 @@
     flex-direction: column;
     gap: 24px;
 
-    background-color: #1a5a4c;
+    background-color: $green-color;
     padding-block: 27px;
 
     @include on-tablet {
