--- a/src/styles/blocks/main/event.scss
+++ b/src/styles/blocks/main/event.scss
@@ -41,12 +41,12 @@
   &__type {
     font-weight: 500;
     text-transform: uppercase;
-    color: #687480;
+    color: $gray-text-color;
   }
 
   &__period {
     font-weight: 700;
-    color: #1a5a4c;
+    color: $green-color;
   }
 
   &__title-container {
