--- a/src/styles/blocks/main/gallery.scss
+++ b/src/styles/blocks/main/gallery.scss
@@ -72,7 +72,7 @@
     }
 
     @include on-desktop {
-      @include imageHover;
+      @include image-hover;
     }
   }
 
@@ -95,7 +95,7 @@
     background-color: #e0e0e0;
 
     &--active {
-      background-color: #1a5a4c;
+      background-color: $green-color;
     }
   }
 }
