--- a/src/styles/blocks/main/lecture.scss
+++ b/src/styles/blocks/main/lecture.scss
@@ -58,7 +58,7 @@
   &__type {
     font-weight: 500;
     text-transform: uppercase;
-    color: #687480;
+    color: $gray-text-color;
 
     @include on-tablet {
       grid-column: 1;
@@ -68,7 +68,7 @@
 
   &__date {
     font-weight: 700;
-    color: #1a5a4c;
+    color: $green-color;
   }
 
   &__title {
