--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,6 +1,11 @@
 $c-gray: #eee;
 
-// Sizes
+// Values
 $tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 $transition-time: 300ms;
+
+// Colors
+$black-text-color: #0f0e08;
+$gray-text-color: #687480;
+$green-color: #1a5a4c;
