--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,13 +5,13 @@
   }
 }
 
-@mixin imageHover {
+@mixin image-hover {
   transition:
     transform $transition-time,
     box-shadow $transition-time;
 
   &:hover {
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.4);
     transform: translateY(-10px);
   }
 }
