--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import 'blocks/page';
+@import 'blocks/header';
+@import 'blocks/menu';
+@import 'blocks/nav';
+@import 'blocks/icon';
+@import 'blocks/current-events';
+@import 'blocks/schedule';
+@import 'blocks/gallery';
+@import 'blocks/subscription';
+@import 'blocks/footer';
