--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import "utils";
+@import "./blocks/header";
+@import "./blocks/art-museum";
+@import "./blocks/icon";
+@import "./blocks/page";
+@import "./blocks/menu";
+@import "./blocks/title";
+@import "./blocks/events";
+@import "./blocks/lecture";
+@import "./blocks/gallery";
+@import "./blocks/subscribe";
+@import "./blocks/footer";
