add_title_and_footer_links

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,5 @@
-$main-font-family:
-  IBM Plex Sans,
-  sans-serif;
 $second-font-family: Montserrat, sans-serif;
+$main-font-family: 'IBM Plex Sans', serif;
 $font-color-main-black: #0f0e08;
 $font-color-grey: #4e4e4e;
 $transition-time: 0.3s;
