--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -156,6 +156,12 @@
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
+
+      &--link {
+        font-weight: 700;
+
+        @include hover(color, $accent-color);
+      }
     }
   }
 
