Fix links and add some animations

--- a/src/styles/blocks/footer/footer.scss
+++ b/src/styles/blocks/footer/footer.scss
@@ -72,6 +72,13 @@
     }
   }
 
+  &__contact-link {
+    color: $black-text-color;
+    text-decoration: none;
+
+    @include float-hover(2px, 4px);
+  }
+
   // Bottom
   &__arrow-up {
     grid-column: -2;
@@ -109,6 +116,7 @@
     color: $black-text-color;
 
     font-size: 14px;
+    @include float-hover(2px, 4px);
   }
 
   &__links-container {
