--- a/src/styles/blocks/header/menu.scss
+++ b/src/styles/blocks/header/menu.scss
@@ -67,6 +67,7 @@
   &__link {
     text-decoration: none;
     color: #fff;
+    @include float-hover(2px, 4px, rgba(255, 255, 255, 0.4));
   }
 
   &__line {
@@ -115,7 +116,7 @@
   &__background {
     position: absolute;
     top: 0;
-    height: 100vh;
+    height: 120vh;
     width: 100%;
     opacity: 40%;
     background-color: #000;
