Add link to logo and some more animations

--- a/src/styles/blocks/footer/footer.scss
+++ b/src/styles/blocks/footer/footer.scss
@@ -24,6 +24,8 @@
   &__logo {
     height: 72px;
     width: 72px;
+
+    @include float-hover(2px, 4px);
   }
 
   &__socials {
@@ -33,6 +35,8 @@
 
   &__social-link {
     display: flex;
+
+    @include float-hover(2px, 4px);
   }
 
   // Containers
@@ -116,6 +120,7 @@
     color: $black-text-color;
 
     font-size: 14px;
+
     @include float-hover(2px, 4px);
   }
 
