--- a/src/styles/blocks/header/menu.scss
+++ b/src/styles/blocks/header/menu.scss
@@ -46,7 +46,9 @@
 
   &__close-button {
     height: 24px;
-    transform: translateY(-4px);
+    margin-top: -4px;
+
+    @include float-hover(2px, 4px, rgba(255, 255, 255, 0.4));
 
     @include on-tablet {
       margin-right: 38px;
@@ -67,6 +69,7 @@
   &__link {
     text-decoration: none;
     color: #fff;
+
     @include float-hover(2px, 4px, rgba(255, 255, 255, 0.4));
   }
 
