--- a/src/styles/blocks/main/event.scss
+++ b/src/styles/blocks/main/event.scss
@@ -5,6 +5,8 @@
     grid-column: 1 / -1;
     width: 100%;
 
+    @include float-hover;
+
     @include on-desktop {
       grid-column: 1 / 8;
     }
