--- a/src/styles/blocks/header/top-bar.scss
+++ b/src/styles/blocks/header/top-bar.scss
@@ -17,12 +17,16 @@
     width: 24px;
     grid-column: 1;
     grid-area: menu;
+
+    @include float-hover(2px, 4px);
   }
 
   &__logo {
     grid-column: 1 / 3;
     grid-row: 1;
     margin: auto;
+
+    @include float-hover(2px, 4px);
 
     @include on-tablet {
       grid-column: 4 / 6;
