--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -77,6 +77,10 @@
     align-items: center;
     gap: 22px;
     margin: 0 auto;
+
+    @include on-desktop {
+      display: none;
+    }
   }
 
   &__dot {
