--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,3 +1,5 @@
+$width: calc(100% + 20px);
+
 .header {
   &__content {
     position: relative;
@@ -12,8 +14,8 @@
 
   &__item {
     position: relative;
-    width: 114%;
-    right: 25px;
+    width: 120%;
+    right: 40px;
     display: flex;
     justify-content: center;
     align-items: flex-start;
