--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -36,6 +36,7 @@ $width: calc(100% + 20px);
     }
 
     @include on-desktop {
+      right: -94px;
       width: 60%;
       min-height: 665px;
     }
