--- a/src/styles/blocks/_menu.scss
+++ b/src/styles/blocks/_menu.scss
@@ -16,6 +16,7 @@
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 24px;
+    padding-right: 10px;
 
     @include on-table {
       gap: 38px;
