--- a/src/styles/blocks/header/menu.scss
+++ b/src/styles/blocks/header/menu.scss
@@ -129,8 +129,7 @@
     top: 0;
     height: 120vh;
     width: 100%;
-    opacity: 40%;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.4);
     z-index: 1;
   }
 }
