add task solution

--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -1,6 +1,7 @@
 .header{
   position: relative;
   margin-bottom: 70px;
+  overflow: hidden;
 
   @include on-tablet{
     display: flex;
@@ -62,6 +63,7 @@
 
     &:hover {
       transform: scale(1.2);
+      overflow: hidden;
     }
   }
 
@@ -90,6 +92,7 @@
     font-size: 45px;
     line-height: 45px;
     text-align: center;
+    overflow: hidden;
 
     @include on-tablet {
       font-size: 54px;
