--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -1,6 +1,10 @@
 .page {
   scroll-behavior: smooth;
 
+    &:has(.page__menu:target) {
+    overflow: hidden;
+  }
+
   &__body {
     margin: 0;
     min-width: 320px;
@@ -11,7 +15,6 @@
     top: 0;
     right: 0;
     left: 0;
-
     opacity: 0;
     pointer-events: none;
     transition: all 0.2s;
@@ -19,6 +22,7 @@
     &:target {
       opacity: 1;
       pointer-events: all;
+
     }
   }
 }
