--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -6,6 +6,7 @@
   line-height: 150%;
   color: $color-grey;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &:has(.page__menu:target) {
     overflow-y: hidden;
