--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'contacts';
+@import 'container';
+@import 'events';
+@import 'footer';
+@import 'gallery';
+@import 'header';
+@import 'hours';
+@import 'icon';
+@import 'menu';
+@import 'page';
+@import 'arrows';
+@import 'address';
+@import 'slider';
 
-body {
-  background: $c-gray;
-}
