--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,29 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+%h2 {
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+}
+
+%h3 {
+  font-family: Montserrat, sans-serif;
   font-weight: 400;
+}
+
+%p {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 300;
+}
+
+%span, %a, %button {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 500;
+}
+
+%div {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-weight: 700;
 }
