--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$c-black-text: #0f0e08;
+$c-green: #1a5a4c;
+$c-grey-text: #687480;
+$c-dark-grey-text: #4e4e4e;
+$c-red: #f14a27;
+$c-white: #fff;
+$effectDuration: 0.3s;
+$icon-side: 24px;
+$slider-height: 100%;
