--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,57 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+
+@mixin on-desktop {
+  @media (min-width: 1280px) {
+    @content;
   }
+}
+
+
+@mixin on-tablet {
+  @media (min-width: 768px)  {
+    @content;
+  }
+}
+
+
+@mixin on-mobile {
+  @media (min-width: 320px)  {
+    @content;
+  }
+}
+
+@mixin grid($mobile, $tablet, $desktop) {
+  display: grid;
+  column-gap: 20px;
+
+  --columns: #{$mobile};
+
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include on-tablet {
+    --columns: #{$tablet};
+
+    column-gap: 30px;
+  }
+
+  @include on-desktop {
+    --columns: #{$desktop};
+  }
+}
+
+@mixin after-line {
+  content: '';
+  position: absolute;
+  bottom: -3px;
+  display: block;
+  height: 1px;
+  width: 100%;
+  background-color: $c-black-text;
+  transition: $effectDuration;
+  transform: scale(0);
+  transform-origin: left;
+}
+
+@mixin scale {
+  transition: $effectDuration;
+  transform: scale(110%);
 }
