--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -18,6 +18,7 @@
   width: 100%;
   transition: 2s;
   object-fit: contain;
+  margin: 0 25px;
 
   @include on-tablet {
     width: 45%;
@@ -26,7 +27,8 @@
 
 }
 
-.slide img{
+.slide img {
+  margin: 0 20px;
   height: 100%;
   width: 800px;
 
