check if linter pass the aproach

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
+@import './reset';
 @import 'utils';
-@import 'fonts';
-@import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './page';
+@import './global';
+@import './blocks/title';
+@import './blocks/button';
+@import './blocks/header';
+@import './blocks/menu';
+@import './blocks/nav';
+@import './blocks/working-hours';
+@import './blocks/exhibitions';
+@import './blocks/event';
+@import './blocks/lectures';
+@import './blocks/lecture';
