--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$title: rgba(15, 14, 8, 1);
+$primary: rgba(0, 0, 0, 1);
+$secondary: rgba(104, 116, 128, 1);
+$green: rgba(26, 90, 76, 1);
+$orange: rgba(241, 74, 39, 1);
+$on-dark-bg: rgba(255, 255, 255, 1);
