--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$font: "IBM Plex Sans", Helvetica, sans-serif;
+$main-text-color: #0F0E08;
+$menu-bgc: #1A5A4C;
+$montserrat-font: 'Montserrat', Helvetica, sans-serif;
