--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import './blocks/page';
+@import './blocks/icon';
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/nav';
+@import './blocks/schedule';
+@import './blocks/menu';
+@import './blocks/section-title';
 
-body {
-  background: $c-gray;
-}
