please check picture teg

--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 280px;
   justify-content: center;
+  row-gap: 20px;
 
   @include on-tablet {
     @include grid-container;
@@ -70,6 +71,7 @@
 
   &__name {
     @include secondary-font;
+
     display: inline-block;
     margin-bottom: 10px;
     text-align: left;
