--- a/src/styles/blocks/exhibitions.scss
+++ b/src/styles/blocks/exhibitions.scss
@@ -1,6 +1,7 @@
 .exhibitions {
   &__wrapper {
     padding-top: 70px;
+    margin-bottom: 60px;
 
     @include grid-container;
 
@@ -8,6 +9,11 @@
 
     @include on-desktop {
       padding-top: 200px;
+      margin-bottom: 112px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 104px;
     }
   }
 
