--- a/src/styles/blocks/lectures.scss
+++ b/src/styles/blocks/lectures.scss
@@ -1,3 +1,29 @@
 .lectures {
-  background: center / cover no-repeat url('./images/bg/lecture/lecture-s.png');
+  &__wrapper {
+    @include grid-container;
+
+    justify-content: center;
+    margin-top: -60px;
+
+    @include on-tablet {
+      margin-top: -65px;
+    }
+
+    @include on-desktop {
+      margin-top: -80px;
+    }
+  }
+
+  &__list {
+    grid-column: span 2;
+    background-color: $on-dark-bg;
+
+    @include on-tablet {
+      grid-column: 2 / span 4;
+    }
+
+    @include on-desktop {
+      grid-column: 4 / span 6;
+    }
+  }
 }
