--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,8 +1,10 @@
 .menu {
   pointer-events: all;
-  overflow: hidden;
 
   &__wrapper {
+    @include grid-container;
+
+    justify-content: center;
     padding-block: 27px;
     background-color: $green;
 
@@ -11,7 +13,6 @@
     @include on-tablet {
       padding-top: 39px;
       padding-bottom: 40px;
-      display: flex;
     }
 
     @include on-desktop {
@@ -21,23 +22,22 @@
   }
 
   &__navigation {
+    grid-column: span 2;
     display: flex;
     gap: 28px;
-    justify-content: space-between;
     border-bottom: 1px solid $on-dark-bg;
     margin-bottom: 24px;
 
     @include on-tablet {
-      padding-right: 38px;
-      gap: 38px;
-      border-right: 1px solid $on-dark-bg;
+      grid-column: span 3;
       border-bottom: none;
       margin-bottom: 0;
     }
 
     @include on-desktop {
+      grid-column: span 6;
       gap: 102px;
-      padding-right: 102px;
+      border-right: 1px solid $on-dark-bg;
     }
   }
 
@@ -47,7 +47,28 @@
   }
 
   &__nav {
-    flex: 1;
     margin-bottom: 24px;
+
+    @include on-tablet {
+      border-right: 1px solid $on-dark-bg;
+      margin-bottom: 0;
+      padding-right: 20px;
+    }
+
+    @include on-desktop {
+      border-right: 0;
+    }
+  }
+
+  &__working-hours {
+    grid-column: span 2;
+
+    @include on-tablet {
+      grid-column: span 3;
+    }
+
+    @include on-desktop {
+      grid-column: 8 / span 5;
+    }
   }
 }
