--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
   @include grid-container;
+
   row-gap: 20px;
   justify-content: center;
   overflow: hidden;
@@ -8,6 +9,7 @@
   &__title-wrapper {
     grid-row: 2;
     grid-column: span 2;
+    position: relative;
 
     @include on-tablet {
       grid-row: 1;
@@ -31,12 +33,17 @@
     min-height: 300px;
     background: bottom / cover no-repeat
       url('../images/pictures/main/main-m.png');
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
 
     @include on-tablet {
       grid-column: span 3;
       margin-left: 0;
       margin-right: -25vw;
       min-height: 384px;
+      justify-content: flex-start;
+      padding-left: 85px;
     }
 
     @include on-desktop {
@@ -62,18 +69,16 @@
     }
   }
 
+  &__logo-link {
+    margin-top: 9px;
+  }
+
   &__logo {
     width: 55px;
     height: 61px;
-    display: block;
-    margin: 9px auto 0;
 
     @include on-tablet {
-      margin: 15px 0 0 80px;
-    }
-
-    @include on-desktop {
-      margin-left: 70px;
+      margin-top: 15px;
     }
   }
 
@@ -81,20 +86,18 @@
     display: flex;
 
     position: absolute;
-    left: var(--padding-inline);
-    top: 27px;
+    top: -290px;
     width: 24px;
 
     cursor: pointer;
 
     @include on-tablet {
-      top: 45px;
-      left: 38px;
+      top: -95px;
+      left: 0;
     }
 
     @include on-desktop {
-      left: 58px;
-      top: 47px;
+      top: -240px;
     }
   }
 
@@ -102,16 +105,6 @@
     d: path(
       'M0 11C0 11.5523 0.447715 12 1 12H8C8.55229 12 9 11.5523 9 11C9 10.4477 8.55229 10 8 10H1C0.447715 10 0 10.4477 0 11ZM0 6C0 6.55228 0.447715 7 1 7H17C17.5523 7 18 6.55228 18 6C18 5.44772 17.5523 5 17 5H1C0.447716 5 0 5.44772 0 6ZM1 0C0.447715 0 0 0.447715 0 1C0 1.55228 0.447715 2 1 2H12C12.5523 2 13 1.55228 13 1C13 0.447715 12.5523 0 12 0H1Z'
     );
-  }
-
-  &__working-hours {
-    @include on-tablet {
-      padding-left: 38px;
-    }
-
-    @include on-desktop {
-      padding-left: 102px;
-    }
   }
 
   &__actions {
@@ -145,6 +138,7 @@
     @include on-tablet {
       margin-bottom: 24px;
     }
+
     @include on-desktop {
       margin-left: auto;
       margin-right: var(--padding-inline);
