--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -26,7 +26,7 @@
     font-size: 28px;
     font-weight: 400;
 
-    @include on-desktop {
+    @include on-tablet {
       font-size: 36px;
     }
   }
