--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -5,6 +5,7 @@
   font-size: 16px;
   font-weight: 500;
   font-style: normal;
+  scroll-behavior: smooth;
 
   --padding-inline: 20px;
   --transition: 0.3s;
