--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -24,13 +24,20 @@
   &__schedule {
     padding-bottom: 27px;
   }
+}
 
-  &__semitransparency {
-    content: '';
-    position: fixed;
-    object-fit: fill;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
+.semitransparency {
+  content: '';
+  position: fixed;
+  bottom: 0;
+  opacity: 0;
+  object-fit: fill;
+  height: 100vh;
+  width: 100vh;
+  pointer-events: none;
+
+  &:target {
+    background: rgba(0, 0, 0, 0.5);
     z-index: 2;
   }
 }
