--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
-@import 'utils';
-@import 'fonts';
-@import 'typography';
+@import './utils/vars';
+@import './utils/mixins';
+@import './blocks/page';
+@import './blocks/header';
+@import './blocks/menu';
+@import './blocks/events';
+@import './blocks/lection';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
 
-body {
-  background: $c-gray;
-}
+
+
