fix form submit, fix menu match design (center, add hover effects to footer links

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -63,7 +63,7 @@
     border-radius: 50%;
     border: 1px solid $color-green;
     justify-self: end;
-    
+
     // place-self: start; /*перевір як спрацювало!*/
     position: relative;
 
@@ -142,8 +142,17 @@ font-size: 14px;
 
 @include on-desctop {
   max-width: 175px;
+
+  &__link {
+  transition: all 0.3s;
+}
+  &__link:hover {
+   background-color: rgba(181, 89, 40, 0.20);
+   border-radius: 5px;
+  }
 }
   &__title {
     margin-bottom: 20px;
   }
+
 }
