--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,7 +5,7 @@
   }
 
 &__top {
-    background-image: url(../images/bg-image/background-image-mob.png);
+    background-image: url(/src/images/bg-image/background-image-mob.png);
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
@@ -99,7 +99,7 @@
 }
 
 .icon--menu {
-  background-image: url(../images/icons/baseline-menu.svg);
+  background-image: url(/src/images/icons/baseline-menu.svg);
 
   @include on-tablet {
     display: none;
@@ -108,7 +108,7 @@
 
 .icon--menu--tablet {
   display: none;
-  background-image: url(../images/icons/baseline-menu.svg);
+  background-image: url(/src/images/icons/baseline-menu.svg);
 
   @include on-tablet {
     display: block;
@@ -125,7 +125,7 @@
   width: 55px;
   height: 61px;
   margin: 0 auto;
-  background-image: url(../images/logo.svg);
+  background-image: url(/src/images/logo.svg);
   background-repeat: no-repeat;
 
   @include on-tablet{
@@ -160,7 +160,7 @@
 
   @include on-desctop {
     margin-left: auto;
-    
+
     @include hover(background-color, rgba(128, 128, 128, 0.19));
   }
 
