add task solution

--- a/src/styles/blocks/ayurvedic-tooth-powder.scss
+++ b/src/styles/blocks/ayurvedic-tooth-powder.scss
@@ -59,7 +59,7 @@
     }
 
     &--img {
-      background-image: url("../images/img_Mobile/Group\ 38.svg");
+      background-image: url(../images/img_Mobile/Group_38.svg);
       height: 397px;
       width: 300px;
       background-size: cover;
@@ -68,7 +68,7 @@
       right: 0;
 
       @include onTablet {
-        background-image: url("../images/img_Table/Group\ 41.svg");
+        background-image: url(../images/img_Table/Group_41.svg);
         height: 397px;
         width: 515px;
       }
