--- a/src/styles/blocks/pros.scss
+++ b/src/styles/blocks/pros.scss
@@ -4,13 +4,13 @@
   justify-content: center;
 
   &__detail {
-    background-image: url("../images/img_Mobile/pros.svg");
+    background-image: url(../images/img_Mobile/pros.svg);
     height: 450px;
     width: 280px;
     background-size: cover;
 
     @include onTablet {
-      background-image: url("../images/img_Table/pros\ \(2\).svg");
+      background-image: url(../images/img_Table/pros_2.svg);
       height: 131px;
       width: 714px;
     }
