--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,20 @@
-$c-gray: #eee;
+$mobile-min-width: 320px;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$desktop-lg-min-width: 1440px;
+
+$color-white: #ffffff;
+$color-black: #0f0e08;
+$color-drk-green: #1a5a4c;
+$color-border-green: rgba(26, 90, 76, 0.5);
+$color-orange: #f14a27;
+$color-gray: #e0e0e0;
+$color-txt-h4: #687480;
+$color-txt-h5: #1a5a4c;
+
+$transition-duration: 0.3s;
+$pad-inline-mobile: 20px;
+$pad-inline-tablet: 34px;
+$pad-inline-desktop: 55px;
+$gap-table: 20px;
+$gap-descktop: 30px;
