--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,21 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks';
 
+*{
+  scroll-behavior: smooth;
+}
+
+html,
 body {
-  background: $c-gray;
+  min-width: 320px;
+  padding: 0;
+  margin: 0;
+}
+
+.container {
+  box-sizing: border-box;
+  height: 100%;
+  @include content-padding-inline;
 }
